# EWC_Game

./: .gitignore  HIGH_PERFORMANCE_SERVERS.md  INVITE_PLAYERS.bat  QUICK_START_400_PLAYERS.md  README.md  README_FERMI_EASTER_EGG.md  SETUP_INSTRUCTIONS.md  START_GAME.bat  multiplayer-standalone.html  package.json  reference.html  setup-high-performance.bat  setup-high-performance.sh  setup-nodejs.bat
public/: index.html  styles.css
public/js/: app.js  game.js  input.js  renderer.js  ui.js
server/: app.js  cluster-server.js  config.js  package-lock.json  package.json
server-go/: main.go
server-rust/: Cargo.toml
server/game/: Food.js  GameWorld.js  Player.js
