[package]
name = "cursor_io_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.4"
parking_lot = "0.12"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
axum = { version = "0.6", features = ["ws", "tower-log"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
once_cell = "1.18"
rayon = "1.7"
crossbeam-channel = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3 